welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var x:String
    ^BDR2:1: error: local variables must be initialized
var x:String
    ^